--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework:spring-aspects:5.3.1'
+
 	compileOnly 'org.springframework.boot:spring-boot-devtools'
+	testCompile 'org.mockito:mockito-core:3.6.28'
+	implementation 'org.aspectj:aspectjweaver:1.9.6'
 }
 
 test {
