--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'org.springframework:spring-aspects:5.3.1'
 
 	compileOnly 'org.springframework.boot:spring-boot-devtools'
-	testCompile 'org.mockito:mockito-core:3.6.28'
+//	testCompile 'org.mockito:mockito-core:3.6.28'
 	implementation 'org.aspectj:aspectjweaver:1.9.6'
 }
 
