--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starter-logging'
+	implementation		'org.springframework.boot:spring-boot-starter-web'
+	providedRuntime		'org.springframework.boot:spring-boot-starter-tomcat'
+	testImplementation	'org.springframework.boot:spring-boot-starter-test'
+	compileOnly			'org.springframework.boot:spring-boot-devtools'
+	implementation		'org.springframework.boot:spring-boot-starter-logging'
 
-	implementation 'org.springframework:spring-aspects:5.3.1'
-
-	compileOnly 'org.springframework.boot:spring-boot-devtools'
-//	testCompile 'org.mockito:mockito-core:3.6.28'
-	implementation 'org.aspectj:aspectjweaver:1.9.6'
+	implementation		'org.springframework:spring-aspects:5.3.1'
+	implementation		'io.springfox:springfox-boot-starter:3.0.0'
+	compile				'io.springfox:springfox-swagger-ui:3.0.0'
 }
 
 test {
